--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
       </div>
     </div>
   </nav>
-  <script src="script.js"></script>
+  <section id="profile">
+    <div class="section__pic-container">
+      <img src="./assets/profile-pic.png" alt="John doe profile pic" />
+    </div>
+    <div class="section__text">
+      <p class="section__text_p1">Hello I'm</p>
+      <h1 class="title">Mayank Verma</h1>
+      <p class="section__text_p2">Frontend Developer</p>
+      <div class="btn-container">
+        <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+        <button class="btn btn-color-1" onclick="location.href='./#Contact'">Contact Info </button>
+      </div>
+      <div id="socials-container">
+        <img src="./assets/linkedin.png" alt="My linkedin profile" class="icon"
+          onclick="location.href='https://www.linkedin.com/in/thisismayankverma'" />
+        <img src="./assets/github.png" alt="My github profile" class="icon"
+          onclick="location.href='https://github.com/'" />
+      </div>
+    </div>
+  </section>
+  <script src=" script.js">
+  </script>
 </body>
 
 </html>
