--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="./assets/profile-pic.png" alt="John doe profile pic" />
+      <img src="./assets/suraj dp-modified.png" alt="John doe profile pic" />
     </div>
     <div class="section__text">
       <p class="section__text_p1">Hello I'm</p>
