--- a/index.html
+++ b/index.html
@@ -57,6 +57,40 @@
       </div>
     </div>
   </section>
+
+ <section id="about"> 
+<p class="section__text_p1">Get to Know more!</p>
+<h1 class="title">About Me</h1>
+<div class="section-container">
+  <div class="section__pic-container">
+    <img src="./assets/about-pic.png" class="about-pic" alt="about pic" />
+  </div>
+  <div class="about-containers">
+    <div class="details-container">
+      <img src="./assets/experience.png" alt="experience icon" class="icon"/>
+      <h3>Experience</h3>
+      <p>2+ Years <br/>Frontend Developer/p>
+    </div>
+    <div class="details-container">
+      <img src="./assets/education.png" alt="experience icon" class="icon"/>
+      <h3>Experience</h3>
+      <p>B.Tech Engineering Degree</p> <br/>Frontend Developer/p>
+    </div>
+  </div>
+  <div class="text-container">
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam odit dolorem amet quisquam in dolorum accusantium voluptatibus necessitatibus optio fuga assumenda consequatur atque sunt minus magni nihil nesciunt non, distinctio similique id error suscipit est minima ea! Ducimus perferendis, quos soluta, ad possimus, consequuntur hic delectus provident magnam nulla accusantium optio vero perspiciatis quam nemo sint recusandae veniam tenetur earum. Molestiae in similique ab maiores sit assumenda quas at, reprehenderit corporis exercitationem doloribus ullam perferendis eveniet, tempora error distinctio magni vitae fugiat dolor. Voluptatem placeat quaerat deleniti, doloremque provident laudantium consequuntur? Itaque, odit! Placeat earum dolore, magni praesentium quaerat iste.
+    </p>
+  </div>
+</div>
+</div>
+<img
+src="./assets/arrow.png"
+alt="arrow icon"
+class="icon arrow"
+onclick="location.href='./#Experience'"
+/>
+ </section>
   <script src=" script.js">
   </script>
 </body>
