--- a/index.html
+++ b/index.html
@@ -65,31 +65,143 @@
   <div class="section__pic-container">
     <img src="./assets/about-pic.png" class="about-pic" alt="about pic" />
   </div>
+ <div class="about-details-container">
   <div class="about-containers">
     <div class="details-container">
       <img src="./assets/experience.png" alt="experience icon" class="icon"/>
       <h3>Experience</h3>
-      <p>2+ Years <br/>Frontend Developer/p>
+      <p>2+ Years <br/>Frontend Developer</p>
     </div>
     <div class="details-container">
       <img src="./assets/education.png" alt="experience icon" class="icon"/>
       <h3>Experience</h3>
-      <p>B.Tech Engineering Degree</p> <br/>Frontend Developer/p>
+      <p>B.Tech Engineering Degree <br/>Frontend Developer</p>
     </div>
-  </div>
-  <div class="text-container">
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam odit dolorem amet quisquam in dolorum accusantium voluptatibus necessitatibus optio fuga assumenda consequatur atque sunt minus magni nihil nesciunt non, distinctio similique id error suscipit est minima ea! Ducimus perferendis, quos soluta, ad possimus, consequuntur hic delectus provident magnam nulla accusantium optio vero perspiciatis quam nemo sint recusandae veniam tenetur earum. Molestiae in similique ab maiores sit assumenda quas at, reprehenderit corporis exercitationem doloribus ullam perferendis eveniet, tempora error distinctio magni vitae fugiat dolor. Voluptatem placeat quaerat deleniti, doloremque provident laudantium consequuntur? Itaque, odit! Placeat earum dolore, magni praesentium quaerat iste.
-    </p>
-  </div>
+</div>
+<div class="text-container">
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quibusdam mollitia repudiandae debitis vero, dolor corporis ex? Debitis consequatur officiis ducimus vero perspiciatis minus sint nostrum unde quisquam, aliquam labore ratione veritatis fugit reiciendis mollitia rem amet quasi temporibus, voluptatem maiores nisi necessitatibus porro molestiae commodi? Sit, voluptatem. Voluptatem, nihil.
+  </p>
 </div>
 </div>
+</div>
+
 <img
 src="./assets/arrow.png"
 alt="arrow icon"
 class="icon arrow"
 onclick="location.href='./#Experience'"
 />
+ </section>
+
+ <section id="experience">
+ <p class="section__text_p1">Explore my</p>
+ <h1 class="title">Experience</h1>
+  <div class="experience-details-container">
+    <div class="about-containers">
+      <div class="details-container">
+        <h2 class="experience-sub-title">Frontend Development</h2>
+          <div class="article-container">
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>HTML</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>CSS</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>SASS</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>JavaScript</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>TypeScript</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>Material UI</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+          </div>
+      </div>
+      <div class="details-container">
+        <h2 class="experience-sub-title">Backend Development</h2>
+          <div class="article-container">
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>PostgreSQL</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>Node JS</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>Express JS</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png"
+              alt="experience icon"
+              class="icon"/>
+              <div>
+                <h3>Git</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+           
+          </div>
+      </div>
+    </div>
+  </div>
  </section>
   <script src=" script.js">
   </script>
