--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="logo">Mayank Verma</div>
     <div>
       <ul class="nav-links">
-        <li><a href="#About">About</a></li>
-        <li><a href="#Experience">Experience</a></li>
-        <li><a href="#Projects">Projects</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -30,10 +30,10 @@
         <span></span>
       </div>
       <div class="menu-links">
-        <li><a href="#About" onclick="toggleMenu()">About</a></li>
-        <li><a href="#Experience" onclick="toggleMenu()">Experience</a></li>
-        <li><a href="#Projects" onclick="toggleMenu()">Projects</a></li>
-        <li><a href="#Contact" onclick="toggleMenu()">Contact</a></li>
+        <li><a href="#about" onclick="toggleMenu()">About</a></li>
+        <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+        <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+        <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
       </div>
     </div>
   </nav>
@@ -90,7 +90,7 @@
 src="./assets/arrow.png"
 alt="arrow icon"
 class="icon arrow"
-onclick="location.href='./#Experience'"
+onclick="location.href='./#experience'"
 />
  </section>
 
@@ -206,7 +206,7 @@ onclick="location.href='./#Experience'"
 src="./assets/arrow.png"
 alt="arrow icon"
 class="icon arrow"
-onclick="location.href='./#Experience'"
+onclick="location.href='./#projects'"
 />
  </section>
 
@@ -254,10 +254,46 @@ onclick="location.href='./#Experience'"
 src="./assets/arrow.png"
 alt="arrow icon"
 class="icon arrow"
-onclick="location.href='./#Experience'"
+onclick="location.href='./#contact'"
 />
 </section>
 
+<section id="contact">
+  <p class="section__text_p1">Get in Touch</p>
+  <h1 class="title">Contact Me</h1>
+  <div class="contact-info-upper-container">
+    <div class="contact-info-container">
+      <img
+      src="./assets/email.png"
+      alt="email icon"
+      class="icon contact-icon email-icon"
+      />
+      <p><a href="mailto:vermayank23@gmail.com">Example@gmail.com</a></p>
+    </div>
+    <div class="contact-info-container">
+      <img
+      src="./assets/linkedin.png"
+      alt="linkedin icon"
+      class="icon contact-icon"
+      />
+      <p><a href="https://www.linkedin.com/in/thisismayankverma/">Example@gmail.com</a></p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <nav>
+    <div class="nav-links-container">
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <p>Copyright &copy; Mayank verma. All right reserved.</p>
+</footer>
   <script src=" script.js">
   </script>
 </body>
